[package]
name = "oxide_share"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0"
tokio = { version = "1.42", features = ["net", "rt", "rt-multi-thread", "macros", "time"] }
tui = "0.19"
crossterm = "0.25"